undefined 'join' on String error in controller specs, needs resolution

--- a/app/views/root/index.erb
+++ b/app/views/root/index.erb
@@ -4,7 +4,7 @@
 <img src="http://cartoonpumpkin.jpg.to" alt="pumpkin"><br>
 
 <!-- link to making a new kid here -->
-
+<a href="/kids/new">Enter a child</a>
 <!-- link to the kids index page here -->
 
 <!-- link to the houses index page here -->
