--- a/app/views/houses/new.erb
+++ b/app/views/houses/new.erb
@@ -1,3 +1,8 @@
 <h1>New House Page</h1>
 
 <!-- house form goes here -->
+<form action="/houses" method="POST">
+Enter address: <input name="house[address]">
+
+<input type="submit" value="Create house">
+</form>
