--- a/app/views/root/index.erb
+++ b/app/views/root/index.erb
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 <h1>Welcome to Halloween</h1>
 <h2>The greatest holiday</h2>
 
@@ -8,3 +11,5 @@
 <!-- link to the kids index page here -->
 
 <!-- link to the houses index page here -->
+</body>
+</html>
