--- a/app/views/kids/new.erb
+++ b/app/views/kids/new.erb
@@ -1,3 +1,8 @@
 <h1>New Kid</h1>
 
-<!-- put form for making a new kid here -->
+<form action="/kids" method="POST">
+Enter name: <input name="kid[name]"><br>
+Enter age: <input name="kid[age]"><br>
+
+<input type="submit" value="Save">
+</form>
