--- a/app/views/kids/show.erb
+++ b/app/views/kids/show.erb
@@ -1,15 +1,29 @@
 <h1>Kid show page</h1>
 
-<!-- display their feeling, their age, and their name -->
+<p><%= @kid.name %> is <%= @kid.age %> years old.</p><br> 
+<p>Feeling: <%= @kid.feeling %></p>
 
 
-<h3>Candy Count: <!-- count the number of candies they have here --></h3>
+<h3>Candy Count: <%= @kid.bucket.candies.count %></h3>
 
-<!-- iterate through their candies here such that it could look like:
 <ul>
-  <li>Name: Skittles</li>
-  <li>Name: Redhots</li>
-</ul> -->
+<% @kid.bucket.candies.each do |candy| %>
+  <li>Name: <%= candy.name %></li>
+
+<% end %>
+</ul>
+
+<form action="<%= "/kids/#{@kid.id}/pig-out" %>" method="POST">
+<input type="hidden" name="_method" value="PATCH">
+<input type="number" name="consumption[number]">
+
+
+
+
+<input type="submit" name="Eat">
+</form>
+
+<a href="/houses">Go trick-or-treating</a>
 
 
 <!-- code the form that will send a patch to "/kids/:id/pig-out"
