--- a/app/views/root/index.erb
+++ b/app/views/root/index.erb
@@ -4,7 +4,10 @@
 <img src="http://cartoonpumpkin.jpg.to" alt="pumpkin"><br>
 
 <!-- link to making a new kid here -->
+<a href="/kids/new">Add a Kid</a>
 
 <!-- link to the kids index page here -->
+<a href="/kids">Show Kids</a>
 
 <!-- link to the houses index page here -->
+<a href="/houses">Show Houses</a>
