--- a/app/views/kids/index.erb
+++ b/app/views/kids/index.erb
@@ -2,3 +2,8 @@
 
 <!-- iterate through all kids here -->
 <!-- remember to link their names to their show pages -->
+<ul>
+  <% Kid.all.each do |kid| %>
+    <li><a href="/kids/<%= kid.id %>"><%= kid.name %></a></li>
+  <% end %>
+</ul>
