--- a/app/views/kids/new.erb
+++ b/app/views/kids/new.erb
@@ -1,3 +1,10 @@
 <h1>New Kid</h1>
 
 <!-- put form for making a new kid here -->
+
+<form action="/kids" method="POST">
+  <input type="text" name="kid[name]" placeholder="kid's name">
+  <input type="text" name="kid[age]" placeholder="kid's age"> 
+  <input type="text" name="kid[feeling]" placeholder="kid's feeling"> 
+  <input type="submit" value="Are you sure you want to create this kid?"> 
+</form>
