--- a/app/views/root/index.erb
+++ b/app/views/root/index.erb
@@ -2,9 +2,14 @@
 <h2>The greatest holiday</h2>
 
 <img src="http://cartoonpumpkin.jpg.to" alt="pumpkin"><br>
+ <ul>
+  <li><a href="/kids/new">Go ahead, make a new kid.</a></li>
 
-<!-- link to making a new kid here -->
+  <li><a href="/kids">See all the kids.</a></li>
 
-<!-- link to the kids index page here -->
 
-<!-- link to the houses index page here -->
+  <li><a href="/houses">See all the houses.</a></li>
+  
+  <li><a href="/houses/new">Build a new house.</a></li>
+
+</ul>
