--- a/app/views/houses/index.erb
+++ b/app/views/houses/index.erb
@@ -1,3 +1,13 @@
 <h1>All Houses</h1>
 
-<!-- iterate through houses and their candies here -->
+<ul>
+  <% House.all.each do |house| %>
+    <li><a href="/houses/<%= house.id %>"><%= house.address %></a></li>
+    <ul>
+      <li> Unclaimed Candy: </li>
+      <% house.unclaimed_candies.each do |candy| %>
+        <li> <%= candy.name %> </li>
+      <% end %>
+    </ul>
+  <% end %>
+</ul>
