--- a/app/views/houses/new.erb
+++ b/app/views/houses/new.erb
@@ -1,3 +1,7 @@
 <h1>New House Page</h1>
 
 <!-- house form goes here -->
+<form action="/houses" method="POST">
+  <input type="text" name="house[address]" placeholder="house address">
+  <input type="submit" value="Create New House">
+</form>
