--- a/app/views/kids/show.erb
+++ b/app/views/kids/show.erb
@@ -1,19 +1,29 @@
 <h1>Kid show page</h1>
 
 <!-- display their feeling, their age, and their name -->
+<h2> <%= @kid.name %> </h2>
+<p> <%= @kid.age %> </p>
+<p>Feeling: <%= @kid.feeling %></p>
 
 
-<h3>Candy Count: <!-- count the number of candies they have here --></h3>
+<h3>Candy Count: <%= @kid.candies.count %></h3>
 
-<!-- iterate through their candies here such that it could look like:
+<!-- iterate through their candies here such that it could look like: -->
 <ul>
-  <li>Name: Skittles</li>
-  <li>Name: Redhots</li>
-</ul> -->
+  <% @kid.candies.each do |candy| %>
+    <li>Name: <%= candy.name %></li>
+  <% end %>
+</ul>
 
 
 <!-- code the form that will send a patch to "/kids/:id/pig-out"
 give it a consumption key with a value of number of candies to eat 
 type="number" is probably better than type="text" -->
 
+<form action="/kids/<%= @kid.id %>/pig-out" method="POST">
+  <input type="hidden" name="_method" value="PATCH">
+  <input type="number" name="consumption" placeholder="amount of candy">
+  <input type="submit" value="feed kid candy">
+</form>
 <!-- puts a link to the houses index page here and call the link "Go trick-or-treating" -->
+<p><a href="/houses">Go trick-or-treating<a></p>
