--- a/app/views/houses/show.erb
+++ b/app/views/houses/show.erb
@@ -1,9 +1,23 @@
 <h1>Houses Show Page</h1>
 
 <!-- show the address here -->
+<h2>House:</h2>
+  <%= @house.address %></br>
 
 <!-- iterate through unclaimedcandies here -->
+  <% @house.candies.each do |candy| %>
+    <li><%= candy.name %></li>
+  <% end %>
 
 <!-- put the trick-or-treat form here, you'll be subitting kid_id -->
+<form action="/houses/<%=@house.id%>/trick-or-treat" method="POST">
+  <input name="_method" type="hidden" value="patch"/>
+  <% @kids.each do |kid| %>
+    <label for="kid_id"><%= kid.name %></label>
+    <input id="kid_id" type="checkbox" value="<%= kid.id %>"/></br>
+  <% end %>
+  <input type="submit" value="Submit"></input>
+</form>
 
 <!-- link to this house's edit page here -->
+<a href="<a href="/houses/<%=@house.id=>"></a>"
