--- a/app/views/houses/index.erb
+++ b/app/views/houses/index.erb
@@ -1,3 +1,7 @@
 <h1>All Houses</h1>
 
 <!-- iterate through houses and their candies here -->
+<% @houses.each do |house| %>
+  <li><%= house.address %></li>
+  <li><%= house.unclaimed_candies %></li>
+<% end %>
