--- a/app/views/houses/new.erb
+++ b/app/views/houses/new.erb
@@ -1,3 +1,10 @@
 <h1>New House Page</h1>
 
 <!-- house form goes here -->
+<form action="/houses" method="POST">
+  <label for="address">Address</label>
+  <input id="address" type="text" name="address"/></br>
+
+
+  <input type="submit" value="Submit"></input>
+</form>
