--- a/app/views/kids/new.erb
+++ b/app/views/kids/new.erb
@@ -1,3 +1,11 @@
 <h1>New Kid</h1>
 
-<!-- put form for making a new kid here -->
+<form action="/kids" method="POST">
+  <label for="kid_name">Name</label>
+  <input id="kid_name" type="text" name="name"> </br>
+
+  <label for="kid_age">Age</label>
+  <input id="kid_age" type="text" name="age"> </br>
+
+  <input type="submit" value="Create Kid">
+</form>
