--- a/app/views/kids/show.erb
+++ b/app/views/kids/show.erb
@@ -1,19 +1,34 @@
 <h1>Kid show page</h1>
 
-<!-- display their feeling, their age, and their name -->
 
+<%= "Name: #{@kid.name}" %></br>
+<%= "Age: #{@kid.age}" %></br>
+<%= "Feeling: #{@kid.feeling}" %>
 
-<h3>Candy Count: <!-- count the number of candies they have here --></h3>
+<h3>Candy Count: <%= @kid.bucket.candies.count %></h3>
 
-<!-- iterate through their candies here such that it could look like:
 <ul>
-  <li>Name: Skittles</li>
-  <li>Name: Redhots</li>
-</ul> -->
+<% @kid.bucket.candies.each do |candy|%>
+  <li><%= "Name: #{candy.name}" %></li>
+  <% end %>
+</ul>
 
+<form action="/kids/<%=@kid.id%>/pig-out" method="POST">
+  <input name="_method" type="hidden" value="patch"/>
+  <label for="consumption">Number of Candies</label>
+  <input id="consumption" type="number" value="consumption"/></br>
+
+  <input type="submit" value="Submit"></input>
+</form>
+
+<p>Feeling: <%=@kid.feeling%></p>
+
+
+
+<a href="/houses/index">Go trick-or-treating</a>
 
 <!-- code the form that will send a patch to "/kids/:id/pig-out"
-give it a consumption key with a value of number of candies to eat 
+give it a consumption key with a value of number of candies to eat
 type="number" is probably better than type="text" -->
 
 <!-- puts a link to the houses index page here and call the link "Go trick-or-treating" -->
