--- a/app/views/root/index.erb
+++ b/app/views/root/index.erb
@@ -3,8 +3,8 @@
 
 <img src="http://cartoonpumpkin.jpg.to" alt="pumpkin"><br>
 
-<!-- link to making a new kid here -->
+<a href="/kids/new"></a>
 
-<!-- link to the kids index page here -->
+<a href="/kids/index"></a>
 
-<!-- link to the houses index page here -->
+<a href="/houses/index"></a>
